feat: basic cache setup, module paths to handler

--- a/src/Marge.Cache/Marge.Cache.csproj
+++ b/src/Marge.Cache/Marge.Cache.csproj
@@ -18,4 +18,9 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Marge.Optimiser\Marge.Optimiser.csproj" />
+    <ProjectReference Include="..\Marge.Record\Marge.Record.csproj" />
+  </ItemGroup>
+
 </Project>
