feat: caches the file, has some configurations, refactors and restructures

--- a/src/Marge.Optimiser/Marge.Optimiser.csproj
+++ b/src/Marge.Optimiser/Marge.Optimiser.csproj
@@ -19,4 +19,9 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Marge.Hasher\Marge.Hasher.csproj" />
+  </ItemGroup>
+
+
 </Project>
